First version of website, need to update with projects

--- a/index.html
+++ b/index.html
@@ -1,9 +1,38 @@
-<html>
-  <head>
-    <title>rpadmarao.github.io</title>
-    <script charset="UTF-8" src="//cdn.sendpulse.com/28edd3380a1c17cf65b137fe96516659/js/push/80dcb8fc4ec25a2dd99da4c7e0386a61_1.js" async></script>
-  </head>
-  <body>
-    <h1>Hello World</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Rohit Padmarao</title>
+
+    <link rel="stylesheet" href="css/profile.css">
+    <script src="https://use.fontawesome.com/3c44ce0d55.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300|Roboto" rel="stylesheet">
+</head>
+<body>
+    <div class="container">
+        <div class="row profile-wrapper">
+            <div class="col-md-4 profile-image-buttons">
+                <img src="resources/ProfilePic.png" alt="profile_pic" id="profile_img">
+            </div>
+            <div class="col-md-8 profile-description">
+                <div id="profile-header-wrapper">
+                    <h1 id="profile-title"><strong>Rohit Padmarao</strong></h1>
+                    <h4 id="profile-subtitle">Software Engineer</h4>
+                </div>
+                <br>
+                <div id="profile-hello">
+                    I am a senior at the University of Illinois at Chicago majoring in Computer Science, graduating in May 2019.
+                </div>
+                <br>
+                <div id="social-buttons-wrapper">
+                    <a class="social-buttons-links" href="https://github.com/rpadmarao" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+                    <a class="social-buttons-links" href="https://www.linkedin.com/in/rohitpadmarao/" target="_blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
+                    <a class="social-buttons-links" href="resources/NewResume2.pdf"><i class="fa fa-file fa-3x" target="_blank" aria-hidden="true"></i></a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</body>
 </html>
