updated resume icon

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div id="social-buttons-wrapper">
                     <a class="social-buttons-links" href="https://github.com/rpadmarao" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
                     <a class="social-buttons-links" href="https://www.linkedin.com/in/rohitpadmarao/" target="_blank"><i class="fa fa-linkedin-square fa-4x" aria-hidden="true"></i></a>
-                    <a class="social-buttons-links" href="resources/NewResume2.pdf"><i class="fa fa-file fa-3x" target="_blank" aria-hidden="true"></i></a>
+                    <a class="social-buttons-links" href="resources/NewResume2.pdf"><i class="fa fa-file-text-o fa-3x" target="_blank" aria-hidden="true"></i></a>
                 </div>
 
             </div>
